yew-macro/tests/classes_macro/classes-fail.stderr
error: expected `,`
 --> $DIR/classes-fail.rs:7:20
  |
7 |     classes!("one" "two");
  |                    ^^^^^

error: string literals must not contain more than one class (hint: use `"two", "three"`)
  --> $DIR/classes-fail.rs:18:21
   |
18 |     classes!("one", "two three", "four");
   |                     ^^^^^^^^^^^

error[E0277]: the trait bound `yew::html::classes::Classes: std::convert::From<{integer}>` is not satisfied
 --> $DIR/classes-fail.rs:4:14
  |
4 |     classes!(42);
  |              ^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::html::classes::Classes`
  |
  = help: the following implementations were found:
            <yew::html::classes::Classes as std::convert::From<&'static str>>
            <yew::html::classes::Classes as std::convert::From<&[T]>>
            <yew::html::classes::Classes as std::convert::From<&std::option::Option<T>>>
            <yew::html::classes::Classes as std::convert::From<&std::string::String>>
          and 4 others
  = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `{integer}`

error[E0277]: the trait bound `yew::html::classes::Classes: std::convert::From<{float}>` is not satisfied
 --> $DIR/classes-fail.rs:5:14
  |
5 |     classes!(42.0);
  |              ^^^^ the trait `std::convert::From<{float}>` is not implemented for `yew::html::classes::Classes`
  |
  = help: the following implementations were found:
            <yew::html::classes::Classes as std::convert::From<&'static str>>
            <yew::html::classes::Classes as std::convert::From<&[T]>>
            <yew::html::classes::Classes as std::convert::From<&std::option::Option<T>>>
            <yew::html::classes::Classes as std::convert::From<&std::string::String>>
          and 4 others
  = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `{float}`

error[E0277]: the trait bound `yew::html::classes::Classes: std::convert::From<{integer}>` is not satisfied
 --> $DIR/classes-fail.rs:9:14
  |
9 |     classes!(vec![42]);
  |              ^^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::html::classes::Classes`
  |
  = help: the following implementations were found:
            <yew::html::classes::Classes as std::convert::From<&'static str>>
            <yew::html::classes::Classes as std::convert::From<&[T]>>
            <yew::html::classes::Classes as std::convert::From<&std::option::Option<T>>>
            <yew::html::classes::Classes as std::convert::From<&std::string::String>>
          and 4 others
  = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `{integer}`
  = note: required because of the requirements on the impl of `std::convert::From<std::vec::Vec<{integer}>>` for `yew::html::classes::Classes`
  = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `std::vec::Vec<{integer}>`

error[E0277]: the trait bound `yew::html::classes::Classes: std::convert::From<{integer}>` is not satisfied
  --> $DIR/classes-fail.rs:13:14
   |
13 |     classes!(some);
   |              ^^^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::html::classes::Classes`
   |
   = help: the following implementations were found:
             <yew::html::classes::Classes as std::convert::From<&'static str>>
             <yew::html::classes::Classes as std::convert::From<&[T]>>
             <yew::html::classes::Classes as std::convert::From<&std::option::Option<T>>>
             <yew::html::classes::Classes as std::convert::From<&std::string::String>>
           and 4 others
   = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `{integer}`
   = note: required because of the requirements on the impl of `std::convert::From<std::option::Option<{integer}>>` for `yew::html::classes::Classes`
   = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `std::option::Option<{integer}>`

error[E0277]: the trait bound `yew::html::classes::Classes: std::convert::From<u32>` is not satisfied
  --> $DIR/classes-fail.rs:14:14
   |
14 |     classes!(none);
   |              ^^^^ the trait `std::convert::From<u32>` is not implemented for `yew::html::classes::Classes`
   |
   = help: the following implementations were found:
             <yew::html::classes::Classes as std::convert::From<&'static str>>
             <yew::html::classes::Classes as std::convert::From<&[T]>>
             <yew::html::classes::Classes as std::convert::From<&std::option::Option<T>>>
             <yew::html::classes::Classes as std::convert::From<&std::string::String>>
           and 4 others
   = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `u32`
   = note: required because of the requirements on the impl of `std::convert::From<std::option::Option<u32>>` for `yew::html::classes::Classes`
   = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `std::option::Option<u32>`

error[E0277]: the trait bound `yew::html::classes::Classes: std::convert::From<{integer}>` is not satisfied
  --> $DIR/classes-fail.rs:16:21
   |
16 |     classes!("one", 42);
   |                     ^^ the trait `std::convert::From<{integer}>` is not implemented for `yew::html::classes::Classes`
   |
   = help: the following implementations were found:
             <yew::html::classes::Classes as std::convert::From<&'static str>>
             <yew::html::classes::Classes as std::convert::From<&[T]>>
             <yew::html::classes::Classes as std::convert::From<&std::option::Option<T>>>
             <yew::html::classes::Classes as std::convert::From<&std::string::String>>
           and 4 others
   = note: required because of the requirements on the impl of `std::convert::Into<yew::html::classes::Classes>` for `{integer}`
